DataGrid: Fix displaying unnecessary vertical scrollbar on iOS if columnAutoWidth is enabled (T681714)

--- a/styles/widgets/common/scrollable.less
+++ b/styles/widgets/common/scrollable.less
@@ -62,7 +62,6 @@
 
     &.dx-scrollable-native-ios {
         .dx-scrollable-content {
-            min-height: 101%;
             .box-sizing(content-box);
         }
 
